Sequential animations - auth sign in

--- a/lib/animations/animations.css
+++ b/lib/animations/animations.css
@@ -171,6 +171,34 @@
   animation-delay: 800ms;
 }
 
+.animation-delay-1000 {
+  animation-delay: 1000ms;
+}
+
+.animation-delay-1500 {
+  animation-delay: 1500ms;
+}
+
+.animation-delay-2000 {
+  animation-delay: 2000ms;
+}
+
+.animation-delay-2500 {
+  animation-delay: 2500ms;
+}
+
+.animation-delay-3000 {
+  animation-delay: 3000ms;
+}
+
+.animation-delay-3500 {
+  animation-delay: 3500ms;
+}
+
+.animation-delay-4000 {
+  animation-delay: 4000ms;
+}
+
 /* Initial states for animations */
 .animate-fade-in-up,
 .animate-fade-in-down,
